Correction des tests